--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,22 @@ spring.application.name=alpha
 # 应用服务 WEB 访问端口
 server.port=8080
 
+#druid数据库连接池
+type=com.alibaba.druid.pool.DruidDataSource
+#清除缓存
+#spring.thymeleaf.cache=false
+spring.thymeleaf.cache=true
+#配置mapper
+#mybatis.mapper-locations=classpath:mapper/*.xml
+
+master.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+master.datasource.url= jdbc:mysql://localhost:3306/test?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&useSSL=false
+master.datasource.username= root
+master.datasource.password= jason1995
+
+second.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+second.datasource.url= jdbc:mysql://localhost:3306/sys?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&useSSL=false
+second.datasource.username= root
+second.datasource.password= jason1995
+
 
